# puppydrive

./: .gitignore  Cargo.toml  README.md  hashspeed  package.json  peer1.sh  peer2.sh
daemon/: Cargo.toml  schema.wdb
daemon/migrations/: 0001_initial.sql  0002_media_scan_path_access.sql  0003_persistent_file_index.sql  0004_virtual_directories.sql  0005_scanned_folder_history.sql
daemon/src/: app.rs  config.rs  database.rs  indexer.rs  lib.rs  main.rs  managed_folder.rs  session_secrets.rs
daemon/ui/: file-table.js  file-upload.js  folder-row.js  image-viewer.js  media-tile.js  mobile-nav.js  video-viewer.js
desktop/: Cargo.toml  tauri.conf.json
desktop/src/: main.rs
desktop/ui/: index.html
puppydrive-daemon/: Cargo.toml
puppydrive-daemon/src/: app.rs  main.rs
src/: app.rs  args.rs  cmd_parser.rs  db.rs  http_server.rs  main.rs  main.ts  network.rs  peer.rs  pftp.rs  protocol.rs  pupynet.rs  scan.rs  server_manager.rs  timer.rs  types.rs  ui.rs  ws.rs
src/web/: app.ts  index.html  router.ts  styles.css
web/: index.html
