[package]
name = "puppydrive"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
simple_logger = "5"
anyhow = "1"
futures-util = "*"
gethostname = "0.5"
uuid =  { version = "1", features = ["v4"] }
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }
axum = { version = "0.8", features = ["ws"] }
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
infer = "0.19"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = { version = "0.10", optional = true }
ring = { version = "0.17" }
rayon = { version = "1", optional = true }
base64 = "0.22"
tokio-util = { version = "0.7", features = ["io"] }
http-body-util = "0.1"
byteorder = "1"
rand = "0.9"
bitflags = "2"

[features]
default = ["sha2"]
rayon = ["dep:rayon"]