[package]
name = "puppydrive-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4"
percent-encoding = "2"
serde_json = "1"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
wgui = { git = "https://github.com/J45k4/wgui.git", rev = "ba2303ff40b37e5f035cff74693d591fc0d1e176" }
