[package]
name = "puppydrive-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
blake3 = "1"
directories = "6"
futures-util = "0.3"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "ico", "jpeg", "png", "webp"] }
log = "0.4"
notify = "8"
percent-encoding = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
simple_logger = "5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
wgui = { git = "https://github.com/J45k4/wgui.git", features = ["sqlite"] }
