[package]
name = "desktop"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
log = "0.4"
puppydrive-daemon = { path = "../puppydrive-daemon" }
simple_logger = "5"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["net", "rt", "time"] }
